feat:// Mirgrated to TurboSQL/LibSQL and added single Player update & optimised code and made it redable | docs:// update
