# docs/swagger.yaml
@@ -1,14 +1,5 @@
 basePath: /
 definitions:
-  model.CustomScrapePlayerErrInfo:
-    properties:
-      message:
-        type: string
-      pid:
-        type: integer
-      type:
-        type: integer
-    type: object
   model.DeletePlayerErrorResponse:
     properties:
       deleted:
@@ -22,6 +13,8 @@ definitions:
     properties:
       deleted:
         type: boolean
+      message:
+        type: string
       pid:
         type: string
     type: object
@@ -52,26 +45,18 @@ definitions:
       alliance:
         type: string
       kid:
-        minimum: 1
         type: integer
       pid:
         type: string
     required:
-    - kid
     - pid
     type: object
-  model.ScrapePlayerInfo:
+  model.UpdatePlayerSSE:
     properties:
-      alliance:
-        type: string
-      dName:
-        type: string
-      kid:
-        type: integer
-      pfp:
-        type: string
-      pid:
-        type: integer
+      player:
+        $ref: '#/definitions/model.PlayerInfo'
+      updated:
+        type: boolean
     type: object
 host: localhost:8081
 info:
@@ -152,22 +137,23 @@ paths:
       summary: Delete a player
       tags:
       - Player
-  /player/update:
+  /player/update/:
     patch:
-      description: 'Loads all players from the database and update every single of
-        them, streaming per-player results as Server-Sent Events (event: update-res)
-        followed by a summary (event: update-fin) about the rows it replaced with
-        recent information. Rate limited.'
+      description: Updates a single Player with the playerID provided in cia teh param
+      parameters:
+      - description: Player ID
+        in: path
+        name: pid
+        required: true
+        type: integer
       produces:
-      - text/event-stream
+      - application/json
       responses:
         "200":
-          description: 'update-res and update-fin event" example(event: update-res\ndata:
-            {"updated":true,"player":{"pid":123,"kid":789,"dNname":"updated-player-name","pfp":"<updated-player-pfp-url>,"alliance":"DES"}}\n\n
-            event: update-fin\ndata: {"count":123 })'
+          description: OK
           schema:
-            type: string
-      summary: Updates the Db with latest Player
+            $ref: '#/definitions/model.UpdatePlayerSSE'
+      summary: Updates the Db with latest Player Data of that player with same PlayerID
       tags:
       - Player
   /redeem/db:
@@ -202,41 +188,4 @@ paths:
       summary: WebSocket test
       tags:
       - Redeem
-  /scraper/stratforge/{fid}:
-    get:
-      consumes:
-      - application/json
-      description: Fetches player profile data from stratforge.tools by player FID
-        (Fleet ID). Returns player display name, kingdom ID, alliance, and profile
-        picture.
-      parameters:
-      - description: Player Fleet ID
-        in: path
-        name: fid
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "202":
-          description: Accepted
-          schema:
-            $ref: '#/definitions/model.ScrapePlayerInfo'
-        "409":
-          description: Player ID doesn't exist
-          schema:
-            $ref: '#/definitions/model.CustomScrapePlayerErrInfo'
-        "500":
-          description: Scraping failed or invalid Player ID
-          schema:
-            $ref: '#/definitions/model.CustomScrapePlayerErrInfo'
-        "502":
-          description: Failed to fetch from stratforge.tools
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Scrape player profile from StratForge
-      tags:
-      - Scraper
 swagger: "2.0"
